# AggroSTL

./: .gitignore  AggroSTL.sln  CMakeLists.txt  README.md  license.txt
.github/workflows/: cmake.yml
AggroSTL/: AggroSTL.vcxproj  AggroSTL.vcxproj.filters  CMakeLists.txt
AggroSTL/aggro/: array.hpp  deque.hpp  list.hpp  mem_profile.hpp  optional.hpp  profile.hpp  utility.hpp
AggroSTL/aggro/allocators/: standard.hpp
AggroSTL/aggro/concepts/: allocator.hpp  objectlife.hpp  objects.hpp  stream.hpp
AggroSTL/modules/: Arrays.ixx  BasicStrings.ixx  String.ixx  StringViews.ixx
AggroSTL/src/: AggroConcepts.hpp  Arrays.hpp  Output.hpp  array.hpp
AggroSTL/src/allocators/: STDAllocator.hpp  standard.hpp
AggroSTL/src/concepts/: AllocConcepts.hpp  StreamConcepts.hpp
AggroSTL/src/interfaces/: Outputable.hpp
AggroSTL/tests/: arrtest.cpp  listtest.cpp
STLTesting/: STLTesting.vcxproj  Source.cpp
